flask-blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-blue-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
        version: "v1"
    spec:
      containers:
      - name: flask
        image: kubgroup/p1_kubgroup:latest
        ports:
        - containerPort: 5000
        # resources:
        #   limits:
        #     memory: 512Mi
        #     cpu: "1"
