flask-blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-blue-service
  labels: 
    name: flask
    version: "v1"
spec:
  selector:
    app: flask
    version: "v1"
  ports:
    - port: 5000
