flask-green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-green-service
  labels:
    name: flask
    version: "v2"
spec:
  selector:
    app: flask
    version: "v2"
  ports:
    - port: 5000
