nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ajnjweb.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-green-service
            port: 
              number: 5000
      - path: /blue
        pathType: Prefix
        backend:
          service:
            name: flask-blue-service
            port:
              number: 5000
